--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,6 +11,7 @@
     "home_page_content" :"In today's time, religion is declining, it is our endeavor that the devotees who want to organize Bhandara at religious places or want to distribute Prasad, can do so sitting at home and get the blessings of God. Due to many reasons, most of the devotees are not able to arrange Bhandara or feed food to the poor at any place of their choice. It is our effort that with the help of our website, they can now arrange Bhandara etc. sitting at home.",
     "services_offered" :"SERVICES OFFERED",
     "mypooja_store" :"MY POOJA STORE",
+    "makakumbh" :"MAHAKUMBH 2025",
     "helpto_needy" :"HELP TO NEEDY",
     "auction" :"AUCTION",
     "about_menu" :"About Us",
@@ -18,6 +19,7 @@
     "refund_replacement_policy" :"Refund & Replacement Policy",
     "privacy_policy_menu" :"Privacy Policy",
     "disclaimers_menu" :"Disclaimers",
+    "cart_imgtext":"This photo is only for illustration purpose actual photo main be differ",
     "add_to_cart" :"ADD TO CART",
     "price" :"₹",
     "cart_items" :"CART",
