--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -11,19 +11,21 @@
 "home_page_content" :"आज के समय में धर्म का ह्रास हो रहा है, हमारा प्रयास है कि जो श्रद्धालु धार्मिक स्थलों पर भंडारे का आयोजन करना चाहते हैं या प्रसाद बांटना चाहते हैं, वे घर बैठे ही ऐसा कर सकें और भगवान का आशीर्वाद प्राप्त कर सकें। कई कारणों से अधिकांश भक्त अपनी पसंद के किसी भी स्थान पर भंडारा की व्यवस्था नहीं कर पाते हैं या गरीबों को खाना नहीं खिला पाते हैं। हमारा प्रयास है कि वे अब हमारी वेबसाइट की मदद से घर बैठे भंडारा आदि की व्यवस्था कर सकें।",
 "services_offered" :"हमारी सेवाएँ",
 "mypooja_store" :"पूजा स्टोर",
+"makakumbh" :"महाकुंभ 2025",
 "helpto_needy" :"जरूरतमंदों की मदद",
 "auction" :"नीलामी",
 "about_menu" :"हमारे बारे में",
 "terms_condition_menu" :"नियम एवं शर्तें",
 "refund_replacement_policy" :"धनवापसी और प्रतिस्थापन नीति",
 "privacy_policy_menu" :"गोपनीयता नीति",
+"cart_imgtext":"यह फोटो केवल चित्रण के उद्देश्य से है, वास्तविक फोटो मुख्य रूप से अलग है",
 "disclaimers_menu" :"अस्वीकरण",
 "add_to_cart" :"कार्ट में जोड़ें",
 "price" :"₹",
 "cart_items" :"कार्ट",
 "payment_summary" :"भुगतान सारांश",
 "cart_summary" :"कार्ट सारांश",
-"place_order" : "",
+"place_order" : "चेक आउट करें",
 "address_title" :"जगह",
 "footer_text" :"सैटिन भारत की सबसे पसंदीदा हिंदू धार्मिक वेबसाइट है। भारत भर के अधिकांश शुभ मंदिरों से भंडार और प्रसाद सीधे अपने घर पर ऑर्डर करें और पवित्र प्रसाद प्राप्त करें",
 "benefits_of_helping_devotees" : "भक्तों की सहायता से लाभ",
@@ -70,6 +72,5 @@
 "contact_information":"संपर्क जानकारी",
 "contact_error" :"कोई भी सुझाव या प्रश्न टाइप करें",
 "contact_button_title" :"मेसेज भेजें"
-
 }
   
