--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,20 +1,24 @@
 {
-  "site_name" :"Satim",  
+  "site_name" :"Astrohawan (key of desires)",  
   "welcome": "Welcome",
     "product_list": "Product List",
     "product_name": "Product Name",
     "product_description": "Product Description",
     "home_menu" : "HOME",
     "contact_menu":"CONTACT US",
-    "home_page_title" :"Why SATIM?",
-    "home_page_temple_title" :"Special temples for seva with satim",
-    "home_page_content" :"In today's time, religion is declining, it is our endeavor that the devotees who want to organize Bhandara at religious places or want to distribute Prasad, can do so sitting at home and get the blessings of God. Due to many reasons, most of the devotees are not able to arrange Bhandara or feed food to the poor at any place of their choice. It is our effort that with the help of our website, they can now arrange Bhandara etc. sitting at home.",
+    "home_page_title" :"Welcome to Our Astrology & Hawan Services",
+    "hawan_title":"HAWANS",
+    "home_page_service_title" :"OUR SERVICES",
+    "home_page_content" :"We have been dedicated to transforming lives Guided by the expertise of gold medalist astrologer Raghava Krishna Sharma, our services have brought clarity, peace, and prosperity to several individuals.",
     "services_offered" :"SERVICES OFFERED",
-    "mypooja_store" :"MY POOJA STORE",
+    "hawans_menu" :"HAWANS",
+    "yantra_menu" :"YANTRA",
+    "raksha_kit_menu":"RAKSHA KIT",
+    "jaap_menu":"JAAP",
     "makakumbh" :"MAHAKUMBH 2025",
     "helpto_needy" :"HELP TO NEEDY",
     "auction" :"AUCTION",
-    "about_menu" :"About Us",
+    "about_menu" :"ABOUT US",
     "terms_condition_menu" :"Terms & conditions",
     "refund_replacement_policy" :"Refund & Replacement Policy",
     "privacy_policy_menu" :"Privacy Policy",
@@ -27,13 +31,13 @@
     "cart_summary" :"CART SUMMARY",
     "place_order" : "PLACE ORDER",
     "address_title" :"Place",
-    "footer_text" : "Satim is India's most favourite Hindu religious website. Order Bhandar and Prasad from most of the auspicious temples across India directly at your home and receive the sacred Prasad",
+    "footer_text" : "Your gateway to success, health, and spiritual well-being through hawans , predictions and  astrology.",
     "benefits_of_helping_devotees" : "Benefits of helping devotees",
     "products_to_aid_devotees" :"Products to aid devotees and the needy at the temple.",
     "products_to_aid_devotees_description" :"Contribution has great importance in Sanatan tradition. Contribution not only brings virtue but also removes the troubles of the planets. During this time, not only others are helped but you are also benefited.Here, you can assist devotees and the needy by providing them with necessary products. In return, you will find inner peace and blessings, thus becoming a good person in the eyes of God.",
     "tab_description" : "Description",
-    "testimonials_title" :"What Devotees say about satim?",
-    "about_content" : "<p>SATIM is a Devotional website which is dedicated to assisting millions of Indians in their spiritual and devotional journeys. It also offers precise guidance to the devotees for worshipping their beloved God.Satim provide opportunity for Hindu devotees to distribute selected intems to the needy through platform.</p> <p> It is written in the Vedas and scriptures that you should Contribute 10% of your earnings to religion. We provide the Vaastu chosen by us to the needy and devotees in the temple premises so that you can get the blessings of God.</p>",
+    "testimonials_title" :"What Devotees say about Astrohawan?",
+    "about_content" : "<p>Hello and welcome! I am Raghava Krishna Sharma, a gold medalist in astrology with over years of enriching experience in guiding individuals through the ancient wisdom of astrology and numerology. My journey has been one of deep exploration into the cosmic energies that influence our lives, and I am passionate about helping others navigate their paths with clarity and purpose.</p><p>As an expert in astrology and numerology,  I offer personalized consultations that delve into the unique patterns of your birth chart, providing insights into your life's journey, potential challenges, and the best times for making important decisions. Whether you are seeking guidance in your career, relationships, health, or spiritual growth, my aim is to empower you with the knowledge and tools you need to live your best life.</p><p>I conduct various types of hawans (sacred fire ceremonies) and chanting sessions, which are powerful spiritual practices to purify the mind, body, and environment. These rituals are designed to receive positive energies, remove obstacles, and promote overall well-being. </p><p>Join me on this journey of self-discovery and enlightenment. Together, we can explore the mysteries of the universe and tap into the cosmic energies that shape our lives. For personalized consultations , hawans & poojas feel free to contact me. Welcome to a new chapter of your life—let's embark on this transformative journey together.</p>",
     "dailog_login_title" :"Login",
     "mobile_no_title":"Mobile No",
     "password_title":"Password",
