--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -24,8 +24,10 @@
     "privacy_policy_menu" :"Privacy Policy",
     "disclaimers_menu" :"Disclaimers",
     "cart_imgtext":"This photo is only for illustration purpose actual photo main be differ",
+    "book_puja" :"BOOK PUJA",
     "add_to_cart" :"ADD TO CART",
     "price" :"₹",
+    "price_global" :"$",
     "cart_items" :"CART",
     "payment_summary" :"Payment Summary",
     "cart_summary" :"CART SUMMARY",
