--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -24,8 +24,10 @@
 "privacy_policy_menu" :"गोपनीयता नीति",
 "cart_imgtext":"यह फोटो केवल चित्रण के उद्देश्य से है, वास्तविक फोटो मुख्य रूप से अलग है",
 "disclaimers_menu" :"अस्वीकरण",
+"book_puja" :"बुक पूजा",
 "add_to_cart" :"कार्ट में जोड़ें",
 "price" :"₹",
+"price_global" :"$",
 "cart_items" :"कार्ट",
 "payment_summary" :"भुगतान सारांश",
 "cart_summary" :"कार्ट सारांश",
