--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,9 +1,6 @@
 {
   "site_name" :"Astrohawan (key of desires)",  
   "welcome": "Welcome",
-    "product_list": "Product List",
-    "product_name": "Product Name",
-    "product_description": "Product Description",
     "home_menu" : "HOME",
     "contact_menu":"CONTACT US",
     "home_page_title" :"Welcome to Our Astrology & Hawan Services",
@@ -15,9 +12,6 @@
     "yantra_menu" :"YANTRA",
     "raksha_kit_menu":"RAKSHA KIT",
     "jaap_menu":"JAAP",
-    "makakumbh" :"MAHAKUMBH 2025",
-    "helpto_needy" :"HELP TO NEEDY",
-    "auction" :"AUCTION",
     "about_menu" :"ABOUT US",
     "terms_condition_menu" :"Terms & conditions",
     "refund_replacement_policy" :"Refund & Replacement Policy",
@@ -34,9 +28,6 @@
     "place_order" : "PLACE ORDER",
     "address_title" :"Place",
     "footer_text" : "Your gateway to success, health, and spiritual well-being through hawans , predictions and  astrology.",
-    "benefits_of_helping_devotees" : "Benefits of helping devotees",
-    "products_to_aid_devotees" :"Products to aid devotees and the needy at the temple.",
-    "products_to_aid_devotees_description" :"Contribution has great importance in Sanatan tradition. Contribution not only brings virtue but also removes the troubles of the planets. During this time, not only others are helped but you are also benefited.Here, you can assist devotees and the needy by providing them with necessary products. In return, you will find inner peace and blessings, thus becoming a good person in the eyes of God.",
     "tab_description" : "Description",
     "testimonials_title" :"What Devotees say about Astrohawan?",
     "about_content" : "<p>Hello and welcome! I am Raghava Krishna Sharma, a gold medalist in astrology with over years of enriching experience in guiding individuals through the ancient wisdom of astrology and numerology. My journey has been one of deep exploration into the cosmic energies that influence our lives, and I am passionate about helping others navigate their paths with clarity and purpose.</p><p>As an expert in astrology and numerology,  I offer personalized consultations that delve into the unique patterns of your birth chart, providing insights into your life's journey, potential challenges, and the best times for making important decisions. Whether you are seeking guidance in your career, relationships, health, or spiritual growth, my aim is to empower you with the knowledge and tools you need to live your best life.</p><p>I conduct various types of hawans (sacred fire ceremonies) and chanting sessions, which are powerful spiritual practices to purify the mind, body, and environment. These rituals are designed to receive positive energies, remove obstacles, and promote overall well-being. </p><p>Join me on this journey of self-discovery and enlightenment. Together, we can explore the mysteries of the universe and tap into the cosmic energies that shape our lives. For personalized consultations , hawans & poojas feel free to contact me. Welcome to a new chapter of your life—let's embark on this transformative journey together.</p>",
@@ -67,6 +58,7 @@
     "verify_otp" :"Account verification",
     "otp_lable":"verification code",
     "placeholder_otp" :"Enter your verification code",
+    "invalid_otp" :"Invalid verification code",
     "confirm_otp" :"Confirm",
     "place_order_donate" :"PARTICIPATE NOW",
     "empty_cart_message" :"Your cart is currently empty",
