--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -1,9 +1,6 @@
 {
 "site_name" :"एस्ट्रोहवन (इच्छाओं की कुंजी)",    
 "welcome": "स्वागत है",
-"product_list": "उत्पाद सूची",
-"product_name": "उत्पाद का नाम",
-"product_description": "उत्पाद विवरण",
 "home_menu" :"होम",
 "contact_menu":"हमसे संपर्क करें",
 "home_page_title" :"हमारी ज्योतिष एवं हवन सेवाओं में आपका स्वागत है",
@@ -15,9 +12,6 @@
 "yantra_menu" :"यंत्र",
 "raksha_kit_menu":"रक्षा किट",
 "jaap_menu":"जाप",
-"makakumbh" :"महाकुंभ 2025",
-"helpto_needy" :"जरूरतमंदों की मदद",
-"auction" :"नीलामी",
 "about_menu" :"हमारे बारे में",
 "terms_condition_menu" :"नियम एवं शर्तें",
 "refund_replacement_policy" :"धनवापसी और प्रतिस्थापन नीति",
@@ -34,9 +28,6 @@
 "place_order" : "चेक आउट करें",
 "address_title" :"जगह",
 "footer_text" :"हवन, भविष्यवाणियों और ज्योतिष के माध्यम से आपकी सफलता, स्वास्थ्य और आध्यात्मिक कल्याण का प्रवेश द्वार।",
-"benefits_of_helping_devotees" : "भक्तों की सहायता से लाभ",
-"products_to_aid_devotees" :"मंदिर में भक्तों और जरूरतमंदों की सहायता के लिए उत्पाद।",
-"products_to_aid_devotees_description" :"सनातन परंपरा में दान का बहुत महत्व काफी बड़ा है. दान से न सिर्फ पुण्य की प्राप्ति होती है बल्कि ग्रहों के कष्ट भी दूर होते हैं. इस दौरान न सिर्फ दूसरों की मदद होती है बल्कि आपका भी कल्याण होता है यहां, आप भक्तों और जरूरतमंदों को आवश्यक उत्पाद प्रदान करके उनकी सहायता कर सकते हैं। बदले में, आपको आंतरिक शांति और आशीर्वाद मिलेगा, इस प्रकार आप भगवान की नज़र में एक अच्छे इंसान बन जायेंगे।",
 "tab_description" : "विवरण",
 "testimonials_title" :"एस्ट्रोहवन के बारे में भक्त क्या कहते हैं",
 "about_content" : "<p>हैलो और स्वागत है! मैं राघव कृष्ण शर्मा हूं, जो ज्योतिष में स्वर्ण पदक विजेता है, जिसके पास ज्योतिष और अंकशास्त्र के प्राचीन ज्ञान के माध्यम से व्यक्तियों का मार्गदर्शन करने का वर्षों का समृद्ध अनुभव है। मेरी यात्रा हमारे जीवन को प्रभावित करने वाली ब्रह्मांडीय ऊर्जाओं की गहन खोज में से एक रही है, और मैं दूसरों को स्पष्टता और उद्देश्य के साथ उनके पथ पर चलने में मदद करने के लिए उत्साहित हूं। </p><p>ज्योतिष और अंकज्योतिष में एक विशेषज्ञ के रूप में, मैं व्यक्तिगत परामर्श प्रदान करता हूं जो आपके जन्म चार्ट के अनूठे पैटर्न में गहराई से उतरता है, आपके जीवन की यात्रा, संभावित चुनौतियों और महत्वपूर्ण निर्णय लेने के लिए सर्वोत्तम समय के बारे में जानकारी प्रदान करता है। चाहे आप अपने करियर, रिश्तों, स्वास्थ्य, या आध्यात्मिक विकास में मार्गदर्शन मांग रहे हों, मेरा उद्देश्य आपको अपना सर्वश्रेष्ठ जीवन जीने के लिए आवश्यक ज्ञान और उपकरणों से सशक्त बनाना है। </p> <p>मैं विभिन्न प्रकार के हवन (पवित्र अग्नि समारोह) और जप सत्र आयोजित करता हूं, जो मन, शरीर और पर्यावरण को शुद्ध करने के लिए शक्तिशाली आध्यात्मिक अभ्यास हैं। ये अनुष्ठान सकारात्मक ऊर्जा प्राप्त करने, बाधाओं को दूर करने और समग्र कल्याण को बढ़ावा देने के लिए डिज़ाइन किए गए हैं। </p><p> Join me on this journey of self-discovery and enlightenment. Together, we can explore the mysteries of the universe and tap into the cosmic energies that shape our lives. For personalized consultations , hawans & poojas feel free to contact me. Welcome to a new chapter of your life—let's embark on this transformative journey together. </p>",
@@ -67,6 +58,7 @@
 "verify_otp" :"खाता सत्यापन",
 "otp_lable":"सत्यापन कोड",
 "placeholder_otp" :"अपना सत्यापन कोड दर्ज करें",
+"invalid_otp" :"अवैध सत्यापन कोड",
 "confirm_otp" :"पुष्टि करें",
 "place_order_donate" :"अभी भाग लें",
 "empty_cart_message" :"आपका कार्ट वर्तमान में खाली है",
